     #2955]

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2 and/or
   v2.8.3:
   * Fixed a regression in recipes of NUT v2.8.3 release (as compared to
     v2.8.2), where `configure --with-docs=all` no longer failed a run
     of the `configure` script when some of the required rendering tools
     were not in fact available. [#2842, fixed by #2921]
   * A change in `Makefile.am` recipes to evaluate some driver names in the
     `DRIVERLIST` variables inspected by `configure` script, rather than
     having all their names hard-coded like before, led to inability to
     `configure --with-drivers=dummy-ups`. [#2825, #2927, fixed by PR #2929]
   * A problem noted with `upsdrvquery` (since NUT v2.8.1) message logging
     at high debug verbosity levels (5+) with very large blocks of content
     has exposed a deficiency in variable-argument handling, and specifically
     adaptive resizing of the output buffer or truncation of logged inputs
     (which is something NUT code tried to do since the beginning of time),
     and could lead to "segmentation fault" crashes on some platforms.
     [issue #2948, PR #2963]

 - common code:
   * Revised common `writepid()` to use `altpidpath()` as location for the
     PID file creation, if the default `rootpidpath()` is not accessible
     (e.g. daemon was not initially started as `root`). Likewise updated
     short PID file based signal sending to consult both locations. [#1717]
   * Refactored NUT "common" sources to reference `nut_version.h` macros from
     a smaller C source file, to minimize the compilation unit size impacted
     by development iterations. [issue #2097]
   * Common code hardening: added sanity-checking for dynamically constructed
     or selected formatting strings with variable-argument list methods
     (typically used with log printing, `dstate` setting, etc.) [#2450]
   * Refactored repetitive implementations of `inet_ntopSS()` (nee